Closed Bug 377739 Opened 17 years ago Closed 17 years ago

Format string issue when importing Opera preferences

Categories

(Core :: General, defect)

x86
Windows Vista
defect
Not set
minor

Tracking

()

RESOLVED FIXED

People

(Reporter: msg, Assigned: jruderman)

References

()

Details

User-Agent:       Mozilla/4.0 (compatible; MSIE 7.0; Windows NT 6.0; SLCC1; .NET CLR 2.0.50727; Media Center PC 5.0; .NET CLR 3.0.04506; .NET CLR 1.1.4322; InfoPath.2)
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9a3pre) Gecko/20070321 Minefield/3.0a3pre

When importing Opera preferences the folling code will be executed (see URL for link to relevent code lines in nsOperaProfileMigrator.cpp):

  if (aResult.Length() > 0)
    printf(val.get());

val is a the home URL of the Opera preferences being imported.  Given that the user will need to initiate the import and it would need to be there home page URL and not just a bookmark this is truely a low severity code clean up/defense indepth issue.

Reproducible: Always

Steps to Reproduce:
1.
2.
3.
Assignee: nobody → jruderman
I removed the printf (with r=mconnor over IRC).
Status: UNCONFIRMED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.