Remove printf.  Bug 377739, r=mconnor.